# tsumego

./: .gitignore  LICENSE  README.md  all_problems.json  build.sh  build_frontend.sh  build_sql.sh  init_db.sh
backend/: .env  Cargo.toml  add_test_user.sql  test.txt
backend/migrations/: 01_init.down.sql  01_init.up.sql  02_challenges.down.sql  02_challenges.up.sql
backend/src/: auth.rs  config.rs  main.rs  periodic_jobs.rs  result.rs  state.rs
backend/src/auth/: db.rs  hashing.rs  mail.rs  middleware.rs  mod.rs  register.rs  session.rs  state.rs  token.rs  token_action.rs  user.rs
backend/src/middleware/: auth.rs  csrf.rs  mod.rs
backend/src/model/: mod.rs  session.rs  srs.rs  stats.rs  time.rs  tsumego.rs  user.rs
backend/src/routes/: auth.rs  index.rs  mod.rs  srs.rs  tsumego.rs
backend/static/: index.html  style.css
backend/templates/: account_verified.html  confirmation_email.txt  log_in.txt  password_changed.txt  reset_password.txt  user_registered.txt  verify_account.txt
frontend/: build.sh  index.html  test.html  tsconfig.json
frontend/html/: index.html  style.css
frontend/lib/: punyt.d.ts
frontend/src/: app.ts  board.ts  utils.ts
frontend/src/api/: auth.ts  load.ts  post.ts  srs.ts  tsumego.ts  utils.ts
frontend/src/model/: board.ts  coordinates.ts  srs.ts  tsumego.ts  user.ts
frontend/src/view/: boardview.ts  tsumegoview.ts
frontend/src/view/components/: boardview.ts  header.ts  tsumegoview.ts
frontend/src/view/pages/: login.ts  (+5 more)
frontend/test/: board.ts  coordinates.ts  tsconfig.json  tsumego.ts
problems/: build.py  problem.py
