[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
authlogic = { version = "0.1.0", features = ["sqlx"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
envy = "0.4.2"
lettre = "0.11.9"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-async-std", "sqlite", "chrono"] }
string_template = "0.2.1"
